Towards 2.1
 - methyl-stats mode: change output to TSV and make several independent files, one per type of data. Now also observe
   depths independently of fragments.   
 - The mode sample-quality-scores now supports .sam, .sam.gz, and .bam files to make a guess at the scale of
   the quality scores contained in the file.
 - Improve compression in hybrid mode by about 10%.
2.0.1
 - Release Goby C/C++ APIs under the LGPL license version 3 to make it possible for companies to incorporate support
   for Goby formats in their tools. Thanks to Collin Hercus for the suggestion. Please note that part of the Goby
   Java APIs are already licensed under the LGPL (anything packaged under the Goby-io.jar file).
 - Fix problem when using a genome backed by a samtools/picard faidx file. In some cases, read bases would be returned
   shifted by one position. Thanks to James Bonfield for reporting this problem.
 - SAM/BAM tags start at column 12, index 11. --preserve-all-tags could skip the first tag on some datasets (e.g.,
   dataset where the first tag was not a MD:Z or RG:Z). Thanks to James Bonfield for reporting this problem.
2.0
 - Support multiple group comparisons for RNA-Seq diff exp (mode compact-alignment-to-annotation-counts).
 - Added a mode sam-comparison to compare a source SAM/BAM file with one that generated after sam-to-compact then
   compact-to-sam.
 - Refactor AlignmentWriter to introduce an interface and make it easier to create facades that modify the behaviour
   of the default writer. For instance, such a facade is BufferedSortingAlignmentWriter, which keeps a number of entries
   in memory to re-sort these entries by genomic position. This feature is used when importing already sorted SAM/BAM
   files to create sorted Goby alignments and the files contain spliced alignments that would cause mis-ordering during
   conversion.
 - Make default chunk-size dependent on the type of chunk codec used. This is useful because hybrid compression does