@@ -1,0 +1,1 @@
+genome	100	8	100	101
