@@ -1,17 +1,27 @@
 Towards 2.1
  - methyl-stats mode: change output to TSV and make several independent files, one per type of data. Now also observe
-   depths independently of fragments.   
+   depths independently of fragments.
  - The mode sample-quality-scores now supports .sam, .sam.gz, and .bam files to make a guess at the scale of
    the quality scores contained in the file.
- - Improve compression in hybrid mode by about 10%.
+ - Improve compression of hybrid-1 codec by about 10% on average. You can disable this improvement with option
+   -x AlignmentCollectionHandler:symbol-modeling=zero_order (this will yield the Goby 2-2.0.1 hybrid-1 codec behavior).
+ - compact-to-sam mode: fix bug where bam tags containing a colon character (:) would be truncated after the first
+    colon. Thanks to Vadim Zalunin for reporting this problem.
 2.0.1
  - Release Goby C/C++ APIs under the LGPL license version 3 to make it possible for companies to incorporate support
    for Goby formats in their tools. Thanks to Collin Hercus for the suggestion. Please note that part of the Goby
    Java APIs are already licensed under the LGPL (anything packaged under the Goby-io.jar file).
+ - C++ API: Support to set placed unmapped (i.e., mate that does not map is recorded with the read that mapped)
+   and clipleft/clipright with quality scores.
  - Fix problem when using a genome backed by a samtools/picard faidx file. In some cases, read bases would be returned
    shifted by one position. Thanks to James Bonfield for reporting this problem.
  - SAM/BAM tags start at column 12, index 11. --preserve-all-tags could skip the first tag on some datasets (e.g.,
    dataset where the first tag was not a MD:Z or RG:Z). Thanks to James Bonfield for reporting this problem.
+ - Introduce interface for ReadsWriter. Introduce mock implementation to write reads to text. This is useful to write
+   more intelligible JUnit tests.
+ - mode sam-to-compact now supports option --read-names-are-query-indices to indicate that the read names are integers
+   (typically produced by compact-to-fasta from a chunk of a large file).
+ - Fix a bug in reformat-compact-reads which did not trim quality scores for paired end reads correctly.
 2.0
  - Support multiple group comparisons for RNA-Seq diff exp (mode compact-alignment-to-annotation-counts).
  - Added a mode sam-comparison to compare a source SAM/BAM file with one that generated after sam-to-compact then
